==================
Satchmo Change Log
==================

Version 0.10.0
--------------
 * Improve filtering of product list admin
 * Make stock quantities editable in the product list admin
 * Add missing requirements: requests, httmock

Version 0.9.1, 15 August, 2016
---------------------------
 * Add CarrierTranslationFactory to CarrierFactory to fix issue with debugging tests


Version 0.9, 15 August, 2016
---------------------------
 * A sudden and unexpected return to version numbers, changelogs and
   good branching practices.
 * Add shipping estimates (to tieredweightzone)
 * Make optional apps required
 * Refactor tests (still more to do)
 * Remove thumbnail app


Version 0.8, November 25, 2008
-----------------------------
 * Add USPS shipping module
 * Converted to using newforms admin
 * Made country validation of post code and territories/states more robust
 * Added Protx payment support
 * New config setting to hide translation fields
 * Refactored payment code to be more modular
 * Change a time stamp field name for Oracle compatability
 * Added support for brands
 * New shuffle filter
 * Multi-site support
 * Added Italian & Hebrew translation
 * Migrated to new django comments functionality. Remove the need for comment_utils
 * Move admin to use nfa and rest of Satchmo now compatible with django 1.0
 * Removed all standalone satchmo settings from settings.py and local_settings.py, moving them
   to a dictionary.  This allows for explicit defaults and for easier integration with other apps.
 * Moved all order methods, classes and views into the satchmo.shop application from Contact
 * Fixed circular imports in several apps.
 * New configuration feature in payment section, allowing shop owners to be notified by email
   when they have a new sale.
 * Refactor of emailing on order completion, now uses signals, simplifying payment modules.
 * New optional app "satchmo.upsell" which allows product upselling on product detail pages.